# zkp-compiler-shootout

./: .gitignore  BENCHMARKS-arm64.md  BENCHMARKS-x86.md  BENCHMARKS.md  CHANGELOG.org  Makefile  README.md  index.html  old-readme.md  rust-toolchain.toml
.github/.workflows/: benchmarks.yml
.github/workflows/: benchmarks.yml
arm64/Blake_ compile/: index.html
docs/: index.html
geb/: .gitignore  EXAMPLES.md  Makefile  README.md  geb.ipkg
miden-assembler/: miden-assembler.asd
shootout/: BENCHMARKS.md  Cargo.toml  notes.org  rust-toolchain
shootout/cairo-giza/: Cargo.toml
shootout/cairo-giza/blake2s/: blake.json  blake2s_hello_world_hash.cairo
shootout/cairo-giza/src/: lib.rs  main.rs
shootout/fib-miden/: Cargo.toml
shootout/fib-miden/src/: lib.rs  main.rs
shootout/fib-risc/: Cargo.toml
shootout/fib-risc/src/: lib.rs  main.rs
shootout/lurk/: Cargo.toml
shootout/lurk/src/: lib.rs
shootout/miden/: Cargo.toml
shootout/miden/src/: lib.rs  main.rs
shootout/risc/: Cargo.toml
shootout/risc/methods/: Cargo.toml
shootout/risc/methods/guest/: Cargo.toml
shootout/risc/src/: lib.rs  main.rs
shootout/risc/sudoku-core/: Cargo.toml
shootout/risc/sudoku-core/src/: lib.rs
shootout/risc0-logs/: ins.txt
shootout/src/: bench.rs  cairo_gz.rs  halo.rs  lurk.rs  main.rs  miden.rs  my_benchmark.rs  plonk.rs  risc.rs  triton.rs  vampir_halo2.rs  vampir_p.rs  vampir_plonk.rs
shootout/sudoku-halo/: Cargo.toml
shootout/sudoku-halo/src/: main.rs
shootout/sudoku-halo2/: Cargo.toml
shootout/sudoku-halo2/src/: circuit.rs  lib.rs  main.rs  sudoku.rs
shootout/sudoku-halo2/src/circuit/: gadget.rs
shootout/sudoku-halo2/src/circuit/gadget/: add_chip.rs
shootout/sudoku-plonk/: Cargo.toml
shootout/sudoku-plonk/src/: lib.rs  main.rs
shootout/sudoku-risc0/: Cargo.toml  README.md
shootout/sudoku-risc0/core/src/: lib.rs
shootout/sudoku-risc0/logs/: test.txt
shootout/sudoku-risc0/methods/guest/: Cargo.toml
shootout/sudoku-risc0/src/: lib.rs  main.rs
shootout/triton/: Cargo.toml
shootout/triton/src/: lib.rs
shootout/vampir-halo2/: Cargo.toml  sudoku.pir
shootout/vampir-halo2/src/: lib.rs  main.rs
shootout/vampir-plonk/: Cargo.toml  blake2s.pir  sudoku.pir
shootout/vampir-plonk/src/: lib.rs  main.rs
shootout/zero-knowledge/: Cargo.toml
shootout/zero-knowledge/src/: lib.rs
sudoku/: 3nums.txt  Cargo.toml  log.txt  test3.txt
sudoku/benches/: benchmark.rs  my_benchmark.rs~
sudoku/core/src/: lib.rs~
sudoku/criterion/HALO_ sudoku-key-gen/base/: benchmark.json  estimates.json  raw.csv
sudoku/criterion/HALO_ sudoku-key-gen/new/: sample.json  tukey.json
sudoku/criterion/HALO_ sudoku-key-gen/report/: index.html
sudoku/criterion/HALO_ sudoku-proof/base/: tukey.json
sudoku/criterion/HALO_ sudoku-proof/new/: benchmark.json  estimates.json  raw.csv  sample.json
sudoku/criterion/HALO_ sudoku-proof/report/: index.html
sudoku/criterion/HALO_ sudoku-setup/base/: raw.csv  tukey.json
sudoku/criterion/HALO_ sudoku-setup/new/: benchmark.json  estimates.json  sample.json
sudoku/criterion/HALO_ sudoku-setup/report/: index.html
sudoku/criterion/HALO_ sudoku-verify/base/: sample.json
sudoku/criterion/HALO_ sudoku-verify/new/: benchmark.json  estimates.json  raw.csv  tukey.json
sudoku/criterion/HALO_ sudoku-verify/report/: index.html
sudoku/criterion/HALO_ sudoku/base/: benchmark.json  raw.csv  sample.json  tukey.json
sudoku/criterion/HALO_ sudoku/new/: estimates.json
sudoku/criterion/HALO_ sudoku/report/: index.html
sudoku/criterion/RISC0_ sudoku-digest/base/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
sudoku/criterion/RISC0_ sudoku-digest/change/: estimates.json
sudoku/criterion/RISC0_ sudoku-digest/report/: index.html
sudoku/criterion/RISC0_ sudoku-prove/base/: raw.csv
sudoku/criterion/RISC0_ sudoku-prove/change/: estimates.json
sudoku/criterion/RISC0_ sudoku-prove/new/: benchmark.json  estimates.json  sample.json  tukey.json
sudoku/criterion/RISC0_ sudoku-prove/report/: index.html
sudoku/criterion/RISC0_ sudoku-setup/base/: benchmark.json  sample.json  tukey.json
sudoku/criterion/RISC0_ sudoku-setup/change/: estimates.json
sudoku/criterion/RISC0_ sudoku-setup/new/: estimates.json  raw.csv
sudoku/criterion/RISC0_ sudoku-setup/report/: index.html
sudoku/criterion/RISC0_ sudoku-verify/base/: benchmark.json  tukey.json
sudoku/criterion/RISC0_ sudoku-verify/change/: estimates.json
sudoku/criterion/RISC0_ sudoku-verify/new/: estimates.json  raw.csv  sample.json
sudoku/criterion/RISC0_ sudoku-verify/report/: index.html
sudoku/criterion/RISC0_ sudoku/base/: benchmark.json  estimates.json  raw.csv
sudoku/criterion/RISC0_ sudoku/change/: estimates.json
sudoku/criterion/RISC0_ sudoku/new/: sample.json  tukey.json
sudoku/criterion/RISC0_ sudoku/report/: index.html
sudoku/criterion/report/: index.html
sudoku/criterion/sudoku-digest/base/: estimates.json  sample.json
sudoku/criterion/sudoku-digest/change/: estimates.json
sudoku/criterion/sudoku-digest/new/: benchmark.json  raw.csv  tukey.json
sudoku/criterion/sudoku-digest/report/: index.html
sudoku/criterion/sudoku-prove/base/: benchmark.json  estimates.json  raw.csv  tukey.json
sudoku/criterion/sudoku-prove/new/: sample.json
sudoku/criterion/sudoku-prove/report/: index.html
sudoku/criterion/sudoku-verify/base/: estimates.json  raw.csv  tukey.json
sudoku/criterion/sudoku-verify/change/: estimates.json
sudoku/criterion/sudoku-verify/new/: benchmark.json  sample.json
sudoku/criterion/sudoku-verify/report/: index.html
sudoku/criterion/sudoku/base/: tukey.json
sudoku/criterion/sudoku/change/: estimates.json
sudoku/criterion/sudoku/new/: benchmark.json  estimates.json  raw.csv  sample.json
sudoku/criterion/sudoku/report/: index.html
sudoku/logs/: test2.txt
sudoku/methods/: Cargo.toml
sudoku/src/: Cargo.toml
sudoku/src/src/: halo.rs  lib.rs  main.rs
sudoku/starter/: Cargo.toml
sudoku/starter/src/: .#lib.rs  halo.rs  lib.rs  main.rs  starter.rs~
triton-assembler/: triton.asd
x86/: index.html
(+494 files in other folders)
