[workspace]

exclude = [
        "sudoku-plonk",
        "sudoku-halo2",
        "miden",
        "risc",
        "zero-knowledge"
]

[package]
name = "shootout"
version = "0.1.0"
edition = "2021"

[dependencies]
zero-knowledge  = { path = "zero-knowledge" }
sudoku_plonk    = { path = "sudoku-plonk" }
sudoku_halo2    = { path = "sudoku-halo2" }
miden-interface = { path = "miden"}
risc            = { path = "risc"}
criterion       = "0.3"

[profile.release]
debug = 1

[[bench]]
name = "my_benchmark"
harness = false
path = "src/main.rs"

# TODO This is dumb that we need to include it here or else rust freaks out ☹
[patch.crates-io]
ark-serialize = { git = "https://github.com/simonmasson/algebra", rev = "e2ea75c" }
ark-ff        = { git = "https://github.com/simonmasson/algebra", rev = "e2ea75c" }
ark-ec        = { git = "https://github.com/simonmasson/algebra", rev = "e2ea75c" }
ark-std       = { git = "https://github.com/arkworks-rs/std/"   , rev = "2b3568f" }