[workspace]

exclude = [
        "sudoku-plonk",
        "sudoku-halo2",
        "triton",
        "miden",
        "risc",
        "vampir-plonk",
        "vampir-halo2",
        "zero-knowledge"
]

[package]
name = "shootout"
version = "0.1.0"
edition = "2021"

[features]

default = ["all_tests", "all_steps"]

all = ["all_tests", "all_steps", "all_compilers"]

# Compiler features
all_compilers = ["miden", "triton", "halo2", "plonk", "vampir_p", "vampir_halo2", "risc"]

miden  = ["dep:miden-interface"]
triton = ["dep:triton"]
halo2  = ["dep:sudoku_halo2"]
plonk  = ["dep:sudoku_plonk"]
risc   = ["dep:risc"]
vampir_p = ["dep:vampir-plonk"]
vampir_halo2 = ["dep:vampir-halo2"]

# Test Features

all_tests = ["sudoku", "fib", "blake"]

sudoku = []
fib    = []
blake  = []

# Steps of the Benchmarks

all_steps = ["compile", "prove", "verify", "prove_and_verify"]

compile = []
prove   = []
verify  = []
prove_and_verify = []

[dependencies]
zero-knowledge  = { path = "zero-knowledge" }

criterion       = "0.3"



sudoku_plonk    = { path = "sudoku-plonk" , optional = true }
sudoku_halo2    = { path = "sudoku-halo2" , optional = true }
miden-interface = { path = "miden"        , optional = true }
risc            = { path = "risc"         , optional = true }
triton          = { path = "triton"       , optional = true }
vampir-plonk    = { path = "vampir-plonk" , optional = true }
vampir-halo2    = { path = "vampir-halo2" , optional = true }

[profile.release]
debug = 1

[[bench]]
name = "my_benchmark"
harness = false
path = "src/main.rs"

# TODO This is dumb that we need to include it here or else rust freaks out ☹
[patch.crates-io]
ark-serialize = { git = "https://github.com/simonmasson/algebra", rev = "e2ea75c" }
ark-ff        = { git = "https://github.com/simonmasson/algebra", rev = "e2ea75c" }
ark-ec        = { git = "https://github.com/simonmasson/algebra", rev = "e2ea75c" }
ark-std       = { git = "https://github.com/arkworks-rs/std/"   , rev = "2b3568f" }
