[package]
name = "cairo-giza"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
giza-core   = { package = "giza-core", git = "https://github.com/maxgillett/giza" }
giza-prover = { package = "giza-prover", git = "https://github.com/maxgillett/giza" }
giza-runner = { package = "giza-runner", git = "https://github.com/maxgillett/giza" }
giza-air    = { package = "giza-air", git = "https://github.com/maxgillett/giza" }
winterfell  = { package = "winter-verifier", git = "https://github.com/maxgillett/winterfell", rev = "0aad6a5", features = ["std"], version = "0.4", default-features = false }
zero-knowledge = { path = "../zero-knowledge" }