[workspace]

[package]
name = "fib-miden"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

miden      = { git = "https://github.com/maticnetwork/miden", brnach="next" }
miden-core = { git = "https://github.com/maticnetwork/miden", branch="next" }