[workspace]

[package]
name = "fib-miden"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

miden      = { git = "https://github.com/maticnetwork/miden", rev="38fff3c08b97ffaaa03450003995b1ccb049aa90" }
miden-core = { git = "https://github.com/maticnetwork/miden", rev="38fff3c08b97ffaaa03450003995b1ccb049aa90" }