[workspace]

[package]
name = "risc"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zero-knowledge = { path = "../zero-knowledge" }
methods-fib = { path = "methods" }
risc0-zkvm = "0.12.0"
serde = "1.0"
num-primes = "0.3.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
sudoku-core = { path = "sudoku-core" }
hex-literal = "0.3.4"
# for debugging
blake2      = "0.10.4"
digest      = "0.10.5"
typenum     = "1.15"
