[workspace]

[package]
name = "sudoku_halo"
version = "0.1.0"
edition = "2021"

[dependencies]
# TODO There are likely better ways of handling this
plonk         = { git = "https://github.com/heliaxdev/ark-plonk", rev="70f9f5c47c13e2b" }
plonk-core    = { git = "https://github.com/heliaxdev/ark-plonk", rev="70f9f5c47c13e2b" }
plonk-hashing = { git = "https://github.com/heliaxdev/ark-plonk", rev="70f9f5c47c13e2b" }
ark-ff              = "0.3"
ark-std             = "0.3"
ark-ec              = "0.3"
ark-sponge          = "0.3"
ark-bls12-377       = "0.3"
ark-bls12-381       = "0.3"
ark-ed-on-bls12-377 = "0.3"
ark-ed-on-bls12-381 = "0.3"
ark-poly            = "0.3"
ark-poly-commit     = "0.3"
blake2              = "0.9"
derivative          = "2.2.0"
paste               = "1.0.6"
rand_core           = {version = "0.6", default-features = false, features = ["getrandom"] }
tempdir             = "0.3"
ark-vesta           = "0.3"

[dev-dependencies]
criterion = "0.3"

# TODO We really need to undo these patches for other sub folders
# Including from Simon's code
[patch.crates-io]
ark-serialize = { git = "https://github.com/simonmasson/algebra", rev = "e2ea75c" }
ark-ff        = { git = "https://github.com/simonmasson/algebra", rev = "e2ea75c" }
ark-ec        = { git = "https://github.com/simonmasson/algebra", rev = "e2ea75c" }
ark-std       = { git = "https://github.com/arkworks-rs/std/"   , rev = "2b3568f" }