[workspace]

[package]
name = "sudoku_halo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zero-knowledge = { path = "../zero-knowledge" }
halo2_proofs   = { git = "https://github.com/heliaxdev/halo2", branch="simon/sudoku"}
pasta_curves   = "0.4"
ff             = "0.12"
rand           = "0.8.4"