[workspace]

members = [
    "methods",
]

[package]
name = "sudoku_risc"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "methods" }
risc0-zkvm-core = "0.10"
risc0-zkvm-host = "0.10"
risc0-zkvm-serde = "0.10"
serde = "1.0"
num-primes = "0.3.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
sudoku-core = { path = "core" }