[package]
name = "starter"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm-core = "0.10"
risc0-zkvm-host = "0.10"
risc0-zkvm-serde = "0.10"
serde = "1.0"
num-primes = "0.3.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
sudoku-core = {path = "../core"}
# TODO There are likely better ways of handling this
plonk         = { git="https://github.com/heliaxdev/ark-plonk", rev="70f9f5c47c13e2b" }
plonk-core    = { git="https://github.com/heliaxdev/ark-plonk", rev="70f9f5c47c13e2b" }
plonk-hashing = { git="https://github.com/heliaxdev/ark-plonk", rev="70f9f5c47c13e2b" }
# For Halo2 Dependencies
ark-ff = "0.3"
ark-sponge = "0.3"
ark-std = "0.3"
ark-bls12-377 = "0.3"
ark-bls12-381 = "0.3"
ark-ec = "0.3"
ark-ed-on-bls12-377 = "0.3"
ark-ed-on-bls12-381 = "0.3"
ark-poly = "0.3"
ark-poly-commit = "0.3"
blake2 = "0.9"
derivative = "2.2.0"
paste = "1.0.6"
rand_core = {version = "0.6", default-features=false, features = ["getrandom"] }
tempdir = "0.3"
ark-vesta = "0.3"


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
path = "../benches/benchmark.rs"