[package]
name = "methods-guest"
version = "0.1.1"
edition = "2021"

[workspace]

[build-dependencies]
risc0-build = "0.18"

[dependencies]
risc0-zkvm = { version = "0.18", default-features = false }
sudoku-core = {path = "../../sudoku-core"}
blake2      = { version = "0.10.4", default-features = false }
digest      = "0.10.5"
typenum     = "1.15"

[profile.release]
debug = 1